--- a/carrito.html
+++ b/carrito.html
@@ -89,9 +89,9 @@
                             <span> </span>
                         </div>
                         <div class="col cantidad">
-                            <button> + </button>
+                            <button class="btn-cantidad" data-action="increase"> + </button>
                             <span class="total-cantidad">1</span>
-                            <button> - </button>
+                            <button class="btn-cantidad" data-action="decrease"> - </button>
                         </div>
                         <div class="col eliminar">
                             <span> <i class="fa-solid fa-xmark"></i> </span>
@@ -112,9 +112,9 @@
                             <span> </span>
                         </div>
                         <div class="col cantidad">
-                            <button> + </button>
+                            <button class="btn-cantidad" data-action="increase"> + </button>
                             <span class="total-cantidad">1</span>
-                            <button> - </button>
+                            <button class="btn-cantidad" data-action="decrease"> - </button>
                         </div>
                         <div class="col eliminar">
                             <span> <i class="fa-solid fa-xmark"></i> </span>
@@ -124,9 +124,9 @@
                         </div>
                     </div>
                     <div class="finalizar-compra">
-                            <h3>Total Compra</h3>
-                            <div class="monto">$ 55.000,00</div>
-                        <button class="btn-pagar">PAGAR</button>
+                        <h3>Total Compra</h3>
+                        <div class="monto">$ 55.000,00</div>
+                        <button class="btn-pagar" id="btn-comprar">PAGAR</button>
                     </div>
                 </div>
             </section>
@@ -134,6 +134,29 @@
         </section>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Función para manejar la compra
+        document.getElementById('btn-comprar').addEventListener('click', function() {
+            const productos = [];
+
+            // Obtener nombres de productos del carrito
+            const filas = document.querySelectorAll('.fila');
+            filas.forEach(function(fila, index) {
+                if (index > 0) { // Ignorar la fila del encabezado
+                    const descripcion = fila.querySelector('.descripcion span').innerText;
+                    const cantidad = fila.querySelector('.total-cantidad').innerText;
+                    productos.push(`${descripcion} (Cantidad: ${cantidad})`);
+                }
+            });
+
+            // Crear el mensaje de WhatsApp
+            const mensaje = `Hola, estoy interesado en los siguientes productos:\n${productos.join('\n')}`;
+            const numeroWhatsApp = '51900038452'; // Tu número de WhatsApp
+            const urlWhatsApp = `https://wa.me/${numeroWhatsApp}?text=${encodeURIComponent(mensaje)}`;
+
+            // Redirigir a WhatsApp
+            window.open(urlWhatsApp, '_blank');
+        });
+    </script>
 </body>
 </html>
